# DSPark

./: .gitattributes  .gitignore  CMakeLists.txt  CMakePresets.json  DSPark.h  Doxyfile  README.md
.github/workflows/: ci.yml  docs.yml
Analysis/: EnvelopeFollower.h  Goertzel.h  LevelFollower.h  LoudnessMeter.h  PhaseCorrelation.h  PitchDetector.h  PitchFollower.h  SpectrumAnalyzer.h
Core/: AnalogConstants.h  AnalogRandom.h  AudioBuffer.h  AudioSpec.h  Biquad.h  Convolver.h  DenormalGuard.h  Dither.h  DryWetMixer.h  DspMath.h  EnvelopeGenerator.h  FFT.h  FIRFilter.h  Hilbert.h  Hysteresis.h  Interpolation.h  LadderFilter.h  MinBlepTable.h  ModulationRouter.h  Oscillator.h  Oversampling.h  Phasor.h  ProcessorChain.h  ProcessorTraits.h  Resampler.h  RingBuffer.h  SampleAndHold.h  SimdOps.h  SmoothedValue.h  Smoothers.h  SpectralProcessor.h  SpinLock.h  SpscQueue.h  StateBlob.h  StateVariableFilter.h  TruePeakDetector.h  WDF.h  WaveshapeTable.h  WavetableOscillator.h  WindowFunctions.h  (+1 more)
DSParkLab/: AudioEngine.h  EffectRegistry.h  EffectSlot.h  Gui.h  main.cpp
Effects/: AlgorithmicReverb.h  AutoGain.h  Chorus.h  Clipper.h  Compressor.h  Crossfade.h  CrossoverFilter.h  DCBlocker.h  DeEsser.h  Delay.h  DynamicEQ.h  Equalizer.h  Expander.h  Filters.h  FrequencyShifter.h  Gain.h  GranularProcessor.h  Limiter.h  MidSide.h  MultibandCompressor.h  NoiseGate.h  NoiseGenerator.h  Panner.h  Phaser.h  PitchShifter.h  Reverb.h  RingModulator.h  Saturation.h  SpectralDenoiser.h  StereoWidth.h  TapeMachine.h  TransformerModel.h  TransientDesigner.h  Tremolo.h  TubePreamp.h  Vibrato.h
IO/: AudioFile.h  Mp3File.h  WavFile.h
Music/: ChordDetector.h  HarmonyConstants.h
bench/: dspark_bench.cpp
cmake/: dsparkConfig.cmake.in
conformance/: dspark_conformance.cpp
docs/: cookbook.md  metrics.md  plugins.md
examples/: README.md  channel_strip.cpp  pitch_tracking_eq.cpp  wav_process.cpp
examples/plugin_ducker/: README.md  ducker.cpp
examples/plugin_ducker/au/: Info.plist
examples/plugin_saturator/: README.md  saturator.cpp
examples/plugin_saturator/au/: Info.plist
examples/plugin_synth/: synth.cpp
examples/plugin_synth/au/: Info.plist
examples/plugin_template/: plugin_template.cpp
examples/plugin_webview_editor/: README.md  webview_saturator.cpp
examples/plugin_webview_files/: CMakeLists.txt  README.md  webgain.cpp
examples/plugin_webview_files/ui/: editor.css  editor.html  editor.js
examples/vst3_plugin/: README.md
packaging/conan/: conanfile.py
packaging/vcpkg/: portfile.cmake  vcpkg.json
plugin/: DSParkPlugin.h
plugin/au/: DSParkAu.h
plugin/clap/: DSParkClap.h
plugin/cmake/: DSParkEmbedEditor.cmake  DSParkPlugin.cmake
plugin/vst3/: DSParkVst3.h
plugin/webview/: DSParkWebViewEditor.h
tools/: amalgamate.py  au_editor_smoke.cpp  clap_smoke_host.cpp  plugin_probe.cpp  vst3_editor_host.cpp  vst3_smoke_host.cpp  x11_editor_smoke.cpp
